kubernetes/apps/services/changedetection/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "ChangeDetection"
    homepage.shamubernetes.com/description: "Watch websites for changes"
    homepage.shamubernetes.com/group: "Tools"
    homepage.shamubernetes.com/order: "50"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:changedetection"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "changedetection.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: changedetection-app
      port: 5000
